src-tauri/build_error_final_v2.txt
   Compiling mdownloader v0.2.0 (D:\WorkStation\IDM\src-tauri)
warning: unused import: `Window`
 --> src\engine\manager.rs:8:22
  |
8 | use tauri::{Emitter, Window};
  |                      ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Window`
 --> src\commands\download.rs:1:20
  |
1 | use tauri::{State, Window, Manager};
  |                    ^^^^^^

warning: unused import: `crate::engine::persistence`
 --> src\commands\reliability.rs:4:5
  |
4 | use crate::engine::persistence;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0382]: borrow of moved value: `app_state`
   --> src\engine\manager.rs:101:33
    |
 76 |     pub async fn start(&self, window: Option<tauri::WebviewWindow>, app_state: Arc<crate::engine::state::AppState>) {
    |                                                                     --------- move occurs because `app_state` has type `Arc<AppState>`, which does not implement the `Copy` trait
...
 93 |         for _worker_id in 0..self.max_workers {
    |         ------------------------------------- inside of this loop
...
101 |             let quota_tracker = app_state.quota_tracker.clone();
    |                                 ^^^^^^^^^ value borrowed here after move
102 |
103 |             let worker = tokio::spawn(async move {
    |                                       ---------- value moved here, in previous iteration of loop
104 |                 loop {
    |                 ---- inside of this loop
    |
    = note: borrow occurs due to deref coercion to `AppState`
help: consider cloning the value before moving it into the closure
    |
103 ~             let value = app_state.clone();
104 ~             let worker = tokio::spawn(async move {
105 |                 loop {
...
136 |                                 quota_tracker.clone(),
137 ~                                 Some(Arc::new(value.simulation_engine.clone())),
    |

error[E0609]: no field `segment_template` on type `&Representation`
   --> src\engine\media.rs:103:44
    |
103 |                     if let Some(st) = &rep.segment_template {
    |                                            ^^^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
103 -                     if let Some(st) = &rep.segment_template {
103 +                     if let Some(st) = &rep.SegmentTemplate {
    |

error[E0282]: type annotations needed
   --> src\engine\media.rs:108:59
    |
108 | ...                   let segment_url: String = media_tmpl.replace("$Number$", &i.to_string());
    |                                                 ^^^^^^^^^^ cannot infer type

error[E0609]: no field `0` on type `&AppState`
   --> src\commands\download.rs:116:31
    |
116 |     let app_state_arc = state.0.clone();
    |                               ^ unknown field
    |
    = note: available fields are: `client`, `downloads`, `quota_tracker`, `simulation_engine`

error[E0616]: field `0` of struct `tauri::State` is private
   --> src\commands\download.rs:248:31
    |
248 |     let app_state_arc = state.0.clone();
    |                               ^ private field

warning: unused import: `Manager`
 --> src\commands\download.rs:1:28
  |
1 | use tauri::{State, Window, Manager};
  |                            ^^^^^^^

warning: unused variable: `is_split`
   --> src\engine\manager.rs:110:39
    |
110 |                     let (segment_idx, is_split, total_size) = {
    |                                       ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_split`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: future cannot be sent between threads safely
   --> src\engine\manager.rs:103:26
    |
103 |               let worker = tokio::spawn(async move {
    |  __________________________^
104 | |                 loop {
105 | |                     if cancel_token.is_cancelled() {
106 | |                         break;
...   |
203 | |             });
    | |______________^ future created by async block is not `Send`
    |
    = help: within `{async block@src\engine\manager.rs:103:39: 103:49}`, the trait `std::marker::Send` is not implemented for `Rc<UnsafeCell<ReseedingRng<rand_chacha::chacha::ChaCha12Core, OsRng>>>`
note: future is not `Send` as this value is used across an await
   --> src\engine\test_utils.rs:37:75
    |
 33 |             let mut rng = rand::thread_rng();
    |                 ------- has type `ThreadRng` which is not `Send`
...
 37 |                 tokio::time::sleep(std::time::Duration::from_millis(100)).await;
    |                                                                           ^^^^^ await occurs here, with `mut rng` maybe used later
note: required by a bound in `tokio::spawn`
   --> C:\Users\-Mobeen-\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.50.0\src\task\spawn.rs:176:21
    |
174 |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
    |            ----- required by a bound in this function
175 |     where
176 |         F: Future + Send + 'static,
    |                     ^^^^ required by this bound in `spawn`

warning: unused variable: `app_state`
  --> src\commands\reliability.rs:10:5
   |
10 |     app_state: State<'_, Arc<AppState>>,
   |     ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_app_state`

Some errors have detailed explanations: E0282, E0382, E0609, E0616.
For more information about an error, try `rustc --explain E0282`.
warning: `mdownloader` (lib) generated 6 warnings
error: could not compile `mdownloader` (lib) due to 6 previous errors; 6 warnings emitted
